objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Reconfigure_Go_Live_Completed__c</fullName>
        <label>Reconfigure: Go Live Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconfigure_Movement_Completed_Date__c</fullName>
        <label>Reconfigure: Movement Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reimbursements__c</fullName>
        <label>Reimbursements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buildout</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Region__c</fullName>
        <formula>TEXT(Account__r.RM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be selected if the project includes removing more equipment than we are installing</description>
        <inlineHelpText>to be selected if the project includes removing more equipment than we are installing</inlineHelpText>
        <label>Removal Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Machine_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_of_VGTs__c</fullName>
        <inlineHelpText>Please enter a number between 0 and 5.</inlineHelpText>
        <label>Requested # of Addt&apos;l VGTs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_From_Opposing_TO__c</fullName>
        <label>Response From Opposing TO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SGI_Paperwork_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SGI Paperwork Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGI_Scheduled_Date__c</fullName>
        <label>SGI Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SGI_Status__c</fullName>
        <inlineHelpText>Tom&apos;s Intralot Status</inlineHelpText>
        <label>SGI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted to SGI</fullName>
                </value>
                <value>
                    <fullName>SGI Scheduled</fullName>
                </value>
                <value>
                    <fullName>Assets on Site</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGI_Transition_Email_sent__c</fullName>
        <label>SGI Transition Email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Membership_Rcvs_Gaming_Rev__c</fullName>
        <formula>Account__r.Sales_Agent_Membership_Rcvs_Gaming_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent Membership Rcvs Gaming Rev?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Ownership__c</fullName>
        <formula>Account__r.Sales_Agent_Ownership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent Ownership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Install_Date__c</fullName>
        <label>Scheduled Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Pull_Date__c</fullName>
        <label>Scheduled Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Reconfig_Bill_Test_Date__c</fullName>
        <label>Scheduled Reconfig Bill Test Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Reconfig_Date__c</fullName>
        <label>Scheduled Reconfig Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Swap_Date__c</fullName>
        <label>Scheduled Swap Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Swap_Go_Live_Date__c</fullName>
        <label>Scheduled Swap Go-Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Seasonal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seasonal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <label>Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_RTT_Received_Date__c</fullName>
        <description>This field will be an audit strictly for the Compliance team to use in order for us to track the
whereabouts of the signed copy of an RTT more efficiently- Anthony Conte</description>
        <label>Signed RTT Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Name</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <errorMessage>Source Name: Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Sales Agent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Acquisition</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Partner Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Amusement Operator</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_UType__c</field>
                <operation>equals</operation>
                <value>Terminal Operator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects Sourced</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Name del</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Name (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Relationships__c</fullName>
        <label>Special Relationships</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Indicator_Notes__c</fullName>
        <label>Stage Indicator Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Indicator__c</fullName>
        <label>Stage Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Rejected the location</fullName>
                </value>
                <value>
                    <fullName>Analysis Team rejected</fullName>
                </value>
                <value>
                    <fullName>Buildout (Ground Up)</fullName>
                </value>
                <value>
                    <fullName>Convert to Competitor - First in Time TUA</fullName>
                </value>
                <value>
                    <fullName>Corporate Does Not Allow Gaming</fullName>
                </value>
                <value>
                    <fullName>Could not obtain Liquor License</fullName>
                </value>
                <value>
                    <fullName>Counsel Review – On Hold</fullName>
                </value>
                <value>
                    <fullName>Denied Gaming License</fullName>
                </value>
                <value>
                    <fullName>Denied Gaming License Renewal</fullName>
                </value>
                <value>
                    <fullName>Does not meet land requirements</fullName>
                </value>
                <value>
                    <fullName>Does not meet municipal requirements</fullName>
                </value>
                <value>
                    <fullName>Executive Team rejected</fullName>
                </value>
                <value>
                    <fullName>IGB distance restriction</fullName>
                </value>
                <value>
                    <fullName>Incomplete Gaming Area</fullName>
                </value>
                <value>
                    <fullName>Location signed an extension</fullName>
                </value>
                <value>
                    <fullName>Location Signed Extension - Lost</fullName>
                </value>
                <value>
                    <fullName>M &amp; A</fullName>
                </value>
                <value>
                    <fullName>Municipality is Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Not interested in gaming</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
                <value>
                    <fullName>Owner has a criminal background</fullName>
                </value>
                <value>
                    <fullName>Petition</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Project Denied</fullName>
                </value>
                <value>
                    <fullName>Security Risk</fullName>
                </value>
                <value>
                    <fullName>Tax Issues</fullName>
                </value>
                <value>
                    <fullName>TUA not properly terminated</fullName>
                </value>
                <value>
                    <fullName>Undiscovered Competitor TUA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Achieved__c</fullName>
        <label>State Liquor License Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Copy_Received_Date__c</fullName>
        <label>State Liquor License Copy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Exp_Date__c</fullName>
        <label>State Liquor License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Number__c</fullName>
        <label>State Liquor License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Probability__c</fullName>
        <label>State Liquor License Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number2__c</fullName>
        <label>Store Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>ZZZDoNotUseStoreNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Style__c</fullName>
        <label>Store Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Layout Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Pictures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Pictures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Swap_Go_Live_Completed_Date__c</fullName>
        <label>Swap: Go Live Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Swap_Movement_Completed_Date__c</fullName>
        <label>Swap: Movement Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TUA_Signed__c</fullName>
        <label>TUA Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temperature_of_Location__c</fullName>
        <label>Temperature of Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terminal_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terminal Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Terminal Operator)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Receipt_Received__c</fullName>
        <label>Termination Receipt Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Business_Hours_Open_per_week__c</fullName>
        <formula>Account__r.Total_Business_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Hours Open (per week)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_HPD__c</fullName>
        <formula>Account__r.Account_HPD__c * Account__r.Current_VGT_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transition_Notes__c</fullName>
        <label>Transition Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Buildout__c</fullName>
        <label>Type of Buildout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Buildout</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Chairs__c</fullName>
        <label>Type of Chairs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard AE Gaming Stool</fullName>
                </value>
                <value>
                    <fullName>MLP Premium Chair</fullName>
                </value>
                <value>
                    <fullName>MLP Patched Chair</fullName>
                </value>
                <value>
                    <fullName>Majestic AE Gaming Stool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undated_Termination_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undated Termination Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VGT_Information_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VGT Information Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VGT_Swap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be selected if the swap related project includes an VGT Swap.</description>
        <inlineHelpText>to be selected if the swap related project includes an VGT Swap.</inlineHelpText>
        <label>VGT Add/Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6th_VGT_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A temporary field to denote that this project includes a 6th (or more) VGT add (as opposed to simply a swap or reconfigure)</description>
        <label>6th VGT Project</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>ACH_Check</fullName>
        <columns>NAME</columns>
        <columns>Accel_Go_Live_Date__c</columns>
        <columns>ACH_Checked_Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACH_Deposit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Accel_Go_Live_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>ACH Checked</label>
        <sharedTo>
            <role>Accel_Super_User</role>
            <role>Assistant_Project_Manager</role>
            <role>Project_Team</role>
            <role>VP_Relationship_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_S_R_IGB_Approved</fullName>
        <columns>NAME</columns>
        <columns>Add_Swap_Reconfigure_Status__c</columns>
        <columns>Install_Approved__c</columns>
        <columns>Compliance_Go_Live__c</columns>
        <columns>Compliance_Notes__c</columns>
        <columns>Add_Scheduled_Install_Date__c</columns>
        <columns>Accel_SGI_Submission__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Relationship_Manager_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Add_Swap_Reconfigure</value>
        </filters>
        <filters>
            <field>Add_Swap_Reconfigure_Status__c</field>
            <operation>equals</operation>
            <value>Pending SGI Schedule Date,Pending Scheduled On-Site Date,Pending Go-Live</value>
        </filters>
        <label>A/S/R IGB Approved</label>
        <sharedTo>
            <role>Accel_Super_User</role>
            <role>Compliance</role>
            <role>Executive_Team</role>
            <roleAndSubordinatesInternal>Compliance</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Add_Swap_Recofigure</fullName>
        <columns>NAME</columns>
        <columns>Project_Rank__c</columns>
        <columns>Add_Swap_Reconfigure_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Closure</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Add_Swap_Reconfigure</value>
        </filters>
        <label>Add/Swap/Reconfigure: Open</label>
        <sharedTo>
            <group>Admin_Users</group>
            <group>Super_User</group>
            <roleAndSubordinates>Project_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>IGB_Inspection__c</columns>
        <columns>Account__c</columns>
        <columns>Application_Submitted__c</columns>
        <columns>IGB_License__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Physical_Address__c</columns>
        <columns>Project_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Live,Closure</value>
        </filters>
        <label>All - Closed Projects</label>
        <sharedTo>
            <role>Accel_Super_User</role>
            <role>VP_Relationship_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Physical_Address__c</columns>
        <columns>Project_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Live,Closure</value>
        </filters>
        <label>All - Open Projects</label>
        <sharedTo>
            <group>Admin_Users</group>
            <roleAndSubordinates>Accel_Super_User</roleAndSubordinates>
            <roleAndSubordinates>Executive_Team</roleAndSubordinates>
            <roleAndSubordinates>VP_Relationship_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alyssa_s_Version_6th_VGT_Projects</fullName>
        <columns>NAME</columns>
        <columns>Install_Approved__c</columns>
        <columns>Compliance_Go_Live__c</columns>
        <columns>Local_Liquor_License_Issuing_Authority__c</columns>
        <columns>Municipality_formula__c</columns>
        <columns>Compliance_Notes__c</columns>
        <columns>Date_of_Asset_Allocation__c</columns>
        <columns>Accel_SGI_Submission__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Add_Scheduled_Install_Date__c</columns>
        <columns>Add_Scheduled_Go_Live_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Add_Swap_Reconfigure</value>
        </filters>
        <filters>
            <field>X6th_VGT_Project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Closure</value>
        </filters>
        <label>Alyssa&apos;s Version - 6th VGT Projects</label>
    </listViews>
    <listViews>
        <fullName>Competitor_Install_Go_Live_Status</fullName>
        <columns>NAME</columns>
        <columns>Initial_Communication_With_Competitor__c</columns>
        <columns>Accel_SGI_Submission__c</columns>
        <columns>Install_Approved__c</columns>
        <columns>Compliance_Go_Live__c</columns>
        <columns>Confirmed_TO_Pull__c</columns>
        <columns>Scheduled_Install_Date__c</columns>
        <columns>Go_Live_Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Competitor</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Live,Closure</value>
        </filters>
        <label>Competitor Install/Go-Live Status</label>
        <sharedTo>
            <group>Super_User</group>
            <role>Assistant_Project_Manager</role>
            <role>Project_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Competitor_Projects</fullName>
        <columns>Days_until_Expiration__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Physical_Address__c</columns>
        <columns>Competitor_TO__c</columns>
        <columns>Competitor_Contract_Expiration_Date__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Competitor</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Live,Closure</value>
        </filters>
        <label>Competitor Projects</label>
        <sharedTo>
            <group>Admin_Users</group>
            <group>List_View_Sales_Operation</group>
            <role>Accel_Super_User</role>
            <role>Compliance</role>
            <role>Project_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Go_Live_Approval</fullName>
        <columns>Account__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>Assigned_RM__c</columns>
        <columns>Municipality_formula__c</columns>
        <columns>Location_Address__c</columns>
        <columns>Electrical_Layout_Inspection_Complete__c</columns>
        <columns>Equipment_Assigned__c</columns>
        <columns>Install_Approved__c</columns>
        <columns>Compliance_Go_Live__c</columns>
        <columns>Compliance_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Organic</value>
        </filters>
        <label>Compliance Go-Live Approval - Organic</label>
        <sharedTo>
            <group>Super_User</group>
            <roleAndSubordinates>Executive_Team</roleAndSubordinates>
            <roleAndSubordinates>VP_Relationship_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Go_Live_Approval_Competitor</fullName>
        <columns>Account__c</columns>
        <columns>Legal_Name__c</columns>
        <columns>Assigned_RM__c</columns>
        <columns>Municipality_formula__c</columns>
        <columns>Location_Address__c</columns>
        <columns>Electrical_Layout_Inspection_Complete__c</columns>
        <columns>Equipment_Assigned__c</columns>
        <columns>Install_Approved__c</columns>
        <columns>Compliance_Go_Live__c</columns>
        <columns>Compliance_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gaming_License_Original_Issue_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Competitor</value>
        </filters>
        <label>Compliance Go-Live Approval - Competitor</label>
        <sharedTo>
            <role>Accel_Super_User</role>
            <role>VP_Relationship_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Competitor_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Liquor_License_Status__c</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>IGB_Inspection__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Competitor</value>
        </filters>
        <label>My Competitor Projects</label>
        <sharedTo>
            <group>Business_Development_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Organic_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Liquor_License_Status__c</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>IGB_Inspection__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Organic</value>
        </filters>
        <label>My Organic Projects</label>
        <sharedTo>
            <group>Business_Development_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>IGB_Inspection__c</columns>
        <columns>Account__c</columns>
        <columns>Application_Submitted__c</columns>
        <columns>IGB_License__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Organic_Projects</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Physical_Address__c</columns>
        <columns>Application_Submitted__c</columns>
        <columns>Fingerprinting_Complete__c</columns>
        <columns>IGB_Inspection__c</columns>
        <columns>IGB_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Organic</value>
        </filters>
        <label>Organic Projects</label>
        <sharedTo>
            <group>Super_User</group>
            <roleAndSubordinates>Accel_Super_User</roleAndSubordinates>
            <roleAndSubordinates>Executive_Team</roleAndSubordinates>
            <roleAndSubordinates>VP_Relationship_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Add_Swap_Reconfigure</fullName>
        <active>true</active>
        <label>Add/Swap/Reconfigure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Video_Gaming_Onboarding</fullName>
        <active>true</active>
        <label>Non-Video Gaming Onboarding</label>
    </recordTypes>
</CustomObject>